networking/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: kube-system
spec:
  parentRefs:
  - name: homelab-gateway
  rules:
  - backendRefs:
    - name: my-headlamp
      port: 80
